[gd_scene load_steps=4 format=3 uid="uid://caml34a3oook0"]

[ext_resource type="Script" uid="uid://cvub6da50hiyw" path="res://Tabs/Preview/Preview.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b5yto2mbqnxbs" path="res://Tabs/Preview/PreviewScene.tscn" id="2"]
[ext_resource type="Script" uid="uid://csw3hvhpxd58v" path="res://Tabs/Preview/PreviewViewport.gd" id="2_xp7sy"]

[node name="Preview" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Auto" type="CheckBox" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Auto-Refresh on theme change."

[node name="Button" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Reset Preview"

[node name="Label" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Click the preview area to lock mouse and control camera."

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
stretch = true
script = ExtResource("2_xp7sy")

[node name="Viewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
gui_disable_input = true
size = Vector2i(1144, 461)
render_target_update_mode = 4

[node name="PreviewScene" parent="ViewportContainer/Viewport" instance=ExtResource("2")]

[connection signal="pressed" from="Container/VBoxContainer/Button" to="." method="refresh_preview"]
